--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Chemistry::Ring
 
+0.20  May 10 2009
+        - Silence some warnings.
+        - Minor changes by Liliana Felix Avila for compatibility with 
+          Chemistry::Artificial.
+
 0.19  Mar 29 2005
         - Fixed memory leak.
         - Added 'ring/rings' attribute to molecule on aromatize_mol.
